--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
             justify-content: center;
             align-items: flex-start;
             padding-top: 20vh;
-            background-color: #ffffff; /* Sky blue background */
+            background-color: #ffffff;
         }
         .bird-container {
             width: 300px;
